# nanobot-rs

./: .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cargo.toml.bak  README.md  README_EN.md  config.local.json  justfile
.claude/: settings.json  settings.local.json
.claude/hooks/: check-before-commit.sh  check-before-push.sh
.codex/: README.md
.codex/hooks/: pre-commit.sh  pre-push.sh
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
crates/nanobot/: Cargo.toml
crates/nanobot-agent/: Cargo.toml
crates/nanobot-agent/src/: builder.rs  context.rs  file_watcher.rs  lib.rs  loop_core.rs  skills.rs  subagent.rs  traits.rs  utils.rs
crates/nanobot-agent/src/react/: executor.rs  mod.rs  planner.rs  state.rs  tool_runner.rs
crates/nanobot-bus/src/: queue.rs
crates/nanobot-channels/: Cargo.toml
crates/nanobot-channels/src/: base.rs  cli.rs  feishu.rs  lib.rs  manager.rs  placeholder.rs  telegram.rs
crates/nanobot-channels/src/feishu/: card.rs  mod.rs  types.rs  util.rs
crates/nanobot-channels/src/telegram/: mod.rs
crates/nanobot-config/src/: loader.rs  schema.rs
crates/nanobot-cron/src/: lib.rs  service.rs
crates/nanobot-prompt/src/: lib.rs  provider.rs  template.rs
crates/nanobot-provider/src/: anthropic.rs  error.rs  fallback.rs  lib.rs  openai_compat.rs  proxy.rs  tool_name.rs  traits.rs
crates/nanobot-provider/src/streaming/: openai_adapter.rs  sse_adapter.rs
crates/nanobot-session/src/: consolidation_strategy.rs  helpers.rs  memory_provider.rs  memory_store.rs  session_hook.rs  session_manager.rs  session_store.rs  types.rs
crates/nanobot-tools/src/: base.rs  config.rs  cron.rs  error.rs  filesystem.rs  mcp.rs  message.rs  registry.rs  registry_builder.rs  search.rs  shell.rs  spawn.rs  web.rs
crates/nanobot-types/src/: builtin.rs  bus.rs  lib.rs  text.rs  tool_name.rs  tools.rs
crates/nanobot/src/: error.rs
crates/nanobot/src/acp/: client.rs  simple_client.rs
crates/nanobot/src/cli/: mod.rs
crates/nanobot/src/heartbeat/: service.rs
crates/nanobot/src/observability/: mod.rs
crates/nanobot/src/runtime/: app.rs
crates/nanobot/templates/: SOUL.md
crates/nanobot/tests/: e2e_local.rs
docs/: ACP_DESIGN_THINKING.md  ACP_IMPLEMENTATION_PLAN.md  ACP_MAINSTREAM_AGENTS.md  ACP_MVP_COMPLETE.md  ACP_PHASE2_COMPLETE.md  ACP_PHASE3_SIMPLIFIED.md  ARCHITECTURE.md  CLI_REFERENCE.md  CODING_AGENT_DESIGN.md  CONFIGURATION.md  DAILY_SUMMARY_2026-03-08.md  DAILY_SUMMARY_2026-03-08_FINAL.md  DEPLOYMENT.md  DEVELOPMENT.md  FALLBACK_PROVIDER.md  MEMORY_SYSTEM_DESIGN.md  OPEN_SOURCE_LEARNING_PATH.md  QUICK_START.md  README.md  SEARCH_TOOLS_SUMMARY.md  STREAMING_UNIFIED_DESIGN.md
docs/examples/: fallback_config.md
scripts/: generate-changelog.sh  install-deps.sh  package-release.sh  quality-gate.sh  setup-git-hooks.sh  verify-tag-version.sh
skills/release-changelog/: SKILL.md
src/: lib.rs  main.rs
src/acp/: client.rs  config.rs  mod.rs
src/agent/: builder.rs  context.rs  loop_core.rs  memory.rs  mod.rs  skills.rs  subagent.rs  traits.rs
src/agent/react/: executor.rs  mod.rs  planner.rs
src/channels/: manager.rs  placeholder.rs  telegram.rs
src/cli/: mod.rs
src/cron/: service.rs
src/heartbeat/: service.rs
src/observability/: mod.rs
src/provider/: anthropic.rs  anthropic_types.rs  base.rs  mod.rs  openai_compat.rs  openai_types.rs  traits.rs
src/provider/streaming/: accumulator.rs  adapter.rs  events.rs  mod.rs  openai_adapter.rs  sse_adapter.rs
src/session/: manager.rs  memory_provider.rs  memory_store.rs  mod.rs
src/tools/: acp.rs  cron.rs  filesystem.rs  mcp.rs  message.rs  mod.rs.bak  registry.rs  search.rs  shell.rs  spawn.rs  web.rs
src/types/: bus.rs  config.rs  cron.rs  mod.rs  provider.rs  tools.rs
src/utils/: helpers.rs  templates.rs
templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
templates/memory/: MEMORY.md
templates/prompts/: code-reviewer.toml
tests/: search_integration.rs
