[package]
name = "nanobot-rs"
version = "0.1.0"
edition = "2024"
description = "Rust reimplementation of nanobot"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
cron = "0.15"
dashmap = "6.1"
dirs = "6.0"
futures = "0.3"
regex = "1.11"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls", "stream", "multipart"] }
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# tracing-opentelemetry = "0.32"
# opentelemetry = "0.31"
# opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace"] }
# opentelemetry-otlp = { version = "0.31", features = ["http-proto", "reqwest-client", "trace"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"
which = "8.0"
html2text = "0.16"
rmcp = { version = "1.1.0", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
parking_lot = "0.12"
agent-client-protocol = "0.10.0"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.10"
tokio-test = "0.4"

[profile.release]
codegen-units = 1
lto = true
