[workspace]
members = [
  "crates/nanobot-types",
  "crates/nanobot-config",
  "crates/nanobot-bus",
  "crates/nanobot-session",
  "crates/nanobot-provider",
  "crates/nanobot-prompt",
  "crates/nanobot-tools",
  "crates/nanobot-cron",
  "crates/nanobot-agent",
  "crates/nanobot-channels",
  "crates/nanobot",
]
resolver = "2"

[workspace.package]
version = "0.0.11"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
toml = "0.8.23"

# Networking
axum = "0.8"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "query",
  "rustls",
  "stream",
  "multipart",
] }
http = "1.3"
url = "2.5"

# Concurrency
dashmap = "6.1"
parking_lot = "0.12"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.15.0"

# Utils
base64 = "0.22"
hmac = "0.12.1"
sha2 = "0.10.9"
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"
regex = "1.11"
notify = "6.1.1"
html2text = "0.16.7"
bytes = "1.0"
which = "8.0"
dirs = "6.0"
tempfile = "3"

# WebSocket
openlark = { version = "0.16.1", default-features = false, features = [
  "auth",
  "communication",
  "websocket",
] }
openlark-auth = "0.16.1"
openlark-core = "0.16.1"
openlark-communication = { version = "0.16.1", default-features = false, features = ["im"] }

# MCP / ACP
rmcp = { version = "1.1.0", default-features = false, features = [
  "client",
  "transport-child-process",
  "transport-streamable-http-client-reqwest",
] }
agent-client-protocol = "0.10.0"

# Internal crates
nanobot-types = { path = "crates/nanobot-types" }
nanobot-config = { path = "crates/nanobot-config" }
nanobot-bus = { path = "crates/nanobot-bus" }
nanobot-session = { path = "crates/nanobot-session" }
nanobot-provider = { path = "crates/nanobot-provider" }
nanobot-prompt = { path = "crates/nanobot-prompt" }
nanobot-tools = { path = "crates/nanobot-tools" }
nanobot-cron = { path = "crates/nanobot-cron" }
nanobot-agent = { path = "crates/nanobot-agent" }
nanobot-channels = { path = "crates/nanobot-channels", default-features = false }

[profile.release]
codegen-units = 1
lto = true
